# CellularAutomaton

./: .gitignore  AGENTS.md  CASearch_Introduction.md  Cargo.toml  README.md  WidthDoublingRules.md  build.wl  build.wls  build_all_targets.sh  doublers_found.txt  notebook_build.wls  search_doublers_gpu.wl
.cargo/: config.toml
CellularAutomaton/: PacletInfo.wl
CellularAutomaton/Kernel/: CellularAutomaton.wl  Functions.wl  Visualizations.wl
CellularAutomaton/Libs/ca_search/: Cargo.toml
CellularAutomaton/Libs/ca_search/shaders/: ca_search.metal
CellularAutomaton/Libs/ca_search/src/: gpu.rs  lib.rs  models.rs
Proofs/: lakefile.lean
Proofs/CA/: Doubler.lean  DoublerFull.lean  DoublerGen.lean  DoublerTrans.lean  DoublerWave.lean  ECA.lean  Glider.lean  TMToTag.lean  TestTrans.lean  Universality.lean  fix_doubler.lean  fix_parens.py  gen_proof.py  gen_trans.py  gen_trans2.py  gen_trans3.py  gen_trans4.py  gen_trans5.py  gen_trans6.py  gen_trans7.py  solve_ifs.lean
Proofs/Code20/: TotalisticCA.lean
Tests/: benchmark.wl  core_tests.wl  cross_validation_tests.wl  gpu_vs_native_tests.wl  native_comparison_tests.wl  nks_doubler_tests.wl  run_tests.wl  test_helpers.wl
gpu_search/: Cargo.toml  ca_search.metal
gpu_search/src/: main.rs
