[workspace]
members = [
    "CellularAutomaton/Libs/ca_search",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[patch.crates-io]
wolfram-app-discovery = { git = "https://github.com/sw1sh/wolfram-app-discovery-rs", branch = "bugfix/wstp_discovery" }
